--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -8,8 +8,7 @@ general {
 
 listener {
     timeout = 180 # 3mins
-    on-timeout = hyprctl switchxkblayout at-translated-set-2-keyboard 0 && loginctl lock-session
-
+    on-timeout = loginctl lock-session
 }
 
 listener {
