--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -1,27 +1,32 @@
-############ Window rules ############
-
-# Make every window (by title) have “noblur”
-windowrulev2 = noblur, title:.*
-
-# Example transparency rule commented out:
-# windowrulev2 = opacity:0.89, title:.*
-
-# Float blueberry.py (assuming “blueberry.py” is the window class):
+# ######## Window rules ########
+windowrulev2 = noblur, class:.*
+# windowrule = opacity 0.89 override 0.89 override, .* # Applies transparency to EVERY WINDOW
+# Floating
 windowrulev2 = float, class:^(blueberry\.py)$
-
-# Float steam (class)
 windowrulev2 = float, class:^(steam)$
+windowrulev2 = float, class:^(guifetch)$   # FlafyDev/guifetch
+windowrulev2 = float, class:^(pavucontrol)$
+windowrulev2 = size 45%, class:^(pavucontrol)$
+windowrulev2 = center, class:^(pavucontrol)$
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 45%, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = center, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, class:^(nm-connection-editor)$
+windowrulev2 = size 45%, class:^(nm-connection-editor)$
+windowrulev2 = center, class:^(nm-connection-editor)$
 
-# Float guifetch
-windowrulev2 = float, class:^(guifetch)$
+# Tiling
+windowrulev2 = tile, class:^dev\.warp\.Warp$
 
-# Warp – explicitly tile it
-windowrulev2 = tile, class:(dev.warp.Warp)
-
-# Float any Picture-in-Picture window
+# Picture-in-Picture
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = keepaspectratio, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = move 73% 72%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = size 25%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = pin, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 
-# Center these matching titles
+# Dialog windows – float+center these windows.
 windowrulev2 = center, title:^(Open File)(.*)$
 windowrulev2 = center, title:^(Select a File)(.*)$
 windowrulev2 = center, title:^(Choose wallpaper)(.*)$
@@ -29,8 +34,6 @@ windowrulev2 = center, title:^(Open Folder)(.*)$
 windowrulev2 = center, title:^(Save As)(.*)$
 windowrulev2 = center, title:^(Library)(.*)$
 windowrulev2 = center, title:^(File Upload)(.*)$
-
-# Also float these dialogs
 windowrulev2 = float, title:^(Open File)(.*)$
 windowrulev2 = float, title:^(Select a File)(.*)$
 windowrulev2 = float, title:^(Choose wallpaper)(.*)$
@@ -39,7 +42,6 @@ windowrulev2 = float, title:^(Save As)(.*)$
 windowrulev2 = float, title:^(Library)(.*)$
 windowrulev2 = float, title:^(File Upload)(.*)$
 
-# Send certain apps (by class) to specific workspaces
 windowrulev2 = workspace:2, class:Google-chrome
 windowrulev2 = workspace:2, class:firefox
 windowrulev2 = workspace:2, class:firefox-developer-edition
@@ -48,18 +50,23 @@ windowrulev2 = workspace:4, class:discord
 windowrulev2 = workspace:4, class:WebCord
 windowrulev2 = workspace:4, class:vesktop
 windowrulev2 = workspace:4, class:armcord
-windowrulev2 = workspace:4, class:org.telegram.desktop
+windowrulev2 = workspace:4, class:^(org.telegram.desktop)(.*)$
 windowrulev2 = workspace:5, class:steam
 windowrulev2 = workspace:10, class:YandexMusic
 
-# Tearing workaround for *.exe (match window “title” that ends with .exe, or use class if needed)
+# --- Tearing ---
 windowrulev2 = immediate, title:.*\.exe
+windowrulev2 = immediate, class:^(steam_app)
 
-# Tearing workaround for steam_app
-windowrulev2 = immediate, class:(steam_app)
-
-# No shadow on tiled windows (i.e. if “floating:0” => not floating => apply “noshadow”)
+# No shadow for tiled windows (matches windows that are not floating).
 windowrulev2 = noshadow, floating:0
+
+# ######## Workspace rules ########
+workspace = special:special, gapsout:30
+workspace = 1, on-created-empty:kitty -e tmux
+workspace = 2, on-created-empty:firefox-developer-edition
+workspace = 4, on-created-empty:telegram-desktop
+
 
 # ######## Layer rules ########
 layerrule = xray 1, .*
@@ -81,29 +88,29 @@ layerrule = blur, launcher
 layerrule = ignorealpha 0.5, launcher
 layerrule = blur, notifications
 layerrule = ignorealpha 0.69, notifications
+layerrule = blur, logout_dialog # wlogout
 
 # ags
-layerrule = animation slide top, sideleft.*
-layerrule = animation slide top, sideright.*
-layerrule = blur, session
-
-layerrule = blur, bar
-layerrule = ignorealpha 0.6, bar
-layerrule = blur, corner.*
-layerrule = ignorealpha 0.6, corner.*
-layerrule = blur, dock
-layerrule = ignorealpha 0.6, dock
+layerrule = animation slide left, sideleft.*
+layerrule = animation slide right, sideright.*
+layerrule = blur, session[0-9]*
+layerrule = blur, bar[0-9]*
+layerrule = ignorealpha 0.6, bar[0-9]*
+layerrule = blur, barcorner.*
+layerrule = ignorealpha 0.6, barcorner.*
+layerrule = blur, dock[0-9]*
+layerrule = ignorealpha 0.6, dock[0-9]*
 layerrule = blur, indicator.*
 layerrule = ignorealpha 0.6, indicator.*
-layerrule = blur, overview
-layerrule = ignorealpha 0.6, overview
-layerrule = blur, cheatsheet
-layerrule = ignorealpha 0.6, cheatsheet
-layerrule = blur, sideright
-layerrule = ignorealpha 0.6, sideright
-layerrule = blur, sideleft
-layerrule = ignorealpha 0.6, sideleft
-layerrule = blur, indicator*
-layerrule = ignorealpha 0.6, indicator*
-layerrule = blur, osk
-layerrule = ignorealpha 0.6, osk
+layerrule = blur, overview[0-9]*
+layerrule = ignorealpha 0.6, overview[0-9]*
+layerrule = blur, cheatsheet[0-9]*
+layerrule = ignorealpha 0.6, cheatsheet[0-9]*
+layerrule = blur, sideright[0-9]*
+layerrule = ignorealpha 0.6, sideright[0-9]*
+layerrule = blur, sideleft[0-9]*
+layerrule = ignorealpha 0.6, sideleft[0-9]*
+layerrule = blur, indicator.*
+layerrule = ignorealpha 0.6, indicator.*
+layerrule = blur, osk[0-9]*
+layerrule = ignorealpha 0.6, osk[0-9]*
