--- a/ags/scripts/templates/hypr/hyprlock.conf
+++ b/ags/scripts/templates/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
-# $text_color = rgba({{ $onBackground }}FF)
-# $entry_background_color = rgba({{ $background }}11)
-# $entry_border_color = rgba({{ $outline }}55)
-# $entry_color = rgba({{ $onSurfaceVariant }}FF)
+# $text_color = rgba(E1E1EFFF)
+# $entry_background_color = rgba(11131C11)
+# $entry_border_color = rgba(8E909F55)
+# $entry_color = rgba(C4C5D6FF)
 $text_color = rgba(FFFFFFFF)
 $entry_background_color = rgba(33333311)
 $entry_border_color = rgba(3B3B3B55)
@@ -11,12 +11,12 @@ $font_family_clock = Rubik Light
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    # color = rgba({{ $surfaceContainerLowest }}FF)
-    color = rgba(000000FF)
+    # color = rgba(0C0E17FF)
+    # color = rgba(000000FF)
     # path = {{ SWWW_WALL }}
-    # path = screenshot
-    # blur_size = 5
-    # blur_passes = 4
+    path = screenshot
+    blur_size = 5
+    blur_passes = 4
 }
 input-field {
     monitor =
@@ -49,7 +49,7 @@ label { # Clock
 }
 label { # Greeting
     monitor =
-    text = hi $USER !!!
+    text = Greetings, master
     shadow_passes = 1
     shadow_boost = 0.5
     color = $text_color
