--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,12 +1,13 @@
 # MONITOR CONFIG
-monitor=eDP-1,2560x1600@120.00,1920x0,1.333333
-monitor=HDMI-A-1,1920x1200@60,0x400,1
+monitor=DP-3,2560x1440@164.84,1920x0,1
+monitor=HDMI-A-1,1920x1080@60,0x360,1
+monitor=HDMI-A-2,1920x1200@60,4480x1000,1.333333
 
-workspace=1,monitor:eDP-1,default:true
-workspace=3,monitor:eDP-1
+workspace=1,monitor:DP-3,default:true
+workspace=3,monitor:DP-3
 workspace=2,monitor:HDMI-A-1,default:true
-workspace=4,monitor:HDMI-A-1
-workspace=0,monitor:HDMI-A-1
+workspace=4,monitor:HDMI-A-2,default:true
+workspace=10,monitor:HDMI-A-2
 monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
@@ -50,6 +51,10 @@ debug {
     damage_tracking = 0
 }
 
+render {
+    direct_scanout = false
+}
+
 general {
     # Gaps and border
     gaps_in = 4
@@ -66,7 +71,7 @@ general {
     layout = dwindle
 
     #focus_to_other_workspaces = true # ahhhh i still haven't properly implemented this
-    allow_tearing = false # This just allows the `immediate` window rule to work
+    allow_tearing = true # This just allows the `immediate` window rule to work
 }
 
 dwindle {
@@ -146,14 +151,9 @@ animations {
     animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
-render {
-    direct_scanout = true
-    # explicit_sync = false
-}
-
 misc {
-    vfr = 0
-    vrr = 0
+    vfr = 1
+    vrr = 1
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     enable_swallow = false
