--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -15,7 +15,7 @@ bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- #
 #!
 ##! Essentials for beginners
 
-bind = Super, Return, exec, kitty -e ~/.config/hypr/term.sh #kitty -e tmux attach || kitty -e tmux
+bind = Super, Return, exec, kitty -e ~/.config/hypr/term.sh
 bind = SuperShift, Return, exec, kitty -e ranger
 bind = Super, , exec, true # Open app launcher
 bind = Ctrl+Super, T, exec, ~/.config/ags/scripts/color_generation/switchwall.sh # Change wallpaper
@@ -37,8 +37,7 @@ bind = Ctrl+Alt, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen # 
 bind = Super+Shift+Alt, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen-sound # Record screen (with sound)
 ##! Session
 # bind = Ctrl+Super, L, exec, ags run-js 'lock.lock()' # [hidden]
-bind = Super, L, exec, hyprctl switchxkblayout at-translated-set-2-keyboard 0 && loginctl lock-session
-# Lock
+bind = Super, L, exec, loginctl lock-session # Lock
 # bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend # Suspend system
 bind = Ctrl+Shift+Alt+Super, Delete, exec, systemctl poweroff || loginctl poweroff # [hidden] Power off
 
@@ -182,7 +181,7 @@ bindl= ,XF86AudioPlay, exec, playerctl play-pause # [hidden]
 
 #!
 ##! Apps
-bind = Super, Z, exec, zeditor # Launch Zed (editor)
+bind = Super, Z, exec, Zed # Launch Zed (editor)
 bind = Super, C, exec, code --password-store=gnome --enable-features=UseOzonePlatform --ozone-platform=wayland # Launch VSCode (editor)
 bind = Super, E, exec, nautilus --new-window # Launch Nautilus (file manager)
 bind = Super+Alt, E, exec, thunar # [hidden]
