--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -2,3 +2,4 @@ preload = /home/i3alumba/.config/hypr/wallpaper.png
 wallpaper=eDP-1,/home/i3alumba/.config/hypr/wallpaper.png
 wallpaper=DP-1,/home/i3alumba/.config/hypr/wallpaper.png
 wallpaper=HDMI-A-1,/home/i3alumba/.config/hypr/wallpaper.png
+wallpaper=HDMI-A-2,/home/i3alumba/.config/hypr/wallpaper.png
