--- a/hypr/hyprland/env.conf
+++ b/hypr/hyprland/env.conf
@@ -2,25 +2,26 @@
 # See https://fcitx-im.org/wiki/Using_Fcitx_5_on_Wayland
 env = QT_IM_MODULE, fcitx
 env = XMODIFIERS, @im=fcitx
-# env = GTK_IM_MODULE, wayland   # Crashes electron apps in xwayland
-# env = GTK_IM_MODULE, fcitx     # My Gtk apps no longer require this to work with fcitx5 hmm
 env = SDL_IM_MODULE, fcitx
 env = GLFW_IM_MODULE, ibus
 env = INPUT_METHOD, fcitx
 
+# ############ Wayland #############
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
 # ############ Themes #############
 env = QT_QPA_PLATFORM, wayland
-env = QT_QPA_PLATFORMTHEME, qt5ct
-# env = QT_STYLE_OVERRIDE,kvantum
+env = QT_QPA_PLATFORMTHEME, kde
+env = XDG_MENU_PREFIX, plasma-
+
+# ######## Wayland #########
+# Tearing
+# env = WLR_DRM_NO_ATOMIC, 1
+# ?
 # env = WLR_NO_HARDWARE_CURSORS, 1
 
-# ######## Screen tearing #########
-# env = WLR_DRM_NO_ATOMIC, 1
+# ######## Virtual envrionment #########
+env = ILLOGICAL_IMPULSE_VIRTUAL_ENV, ~/.local/state/quickshell/.venv
 
-# ############ Others #############
-env = XDG_SESSION_TYPE,gnome
-env = XDG_SESSION_TYPE,wayland
-env = ELECTRON_OZONE_PLATFORM_HINT,wayland
-env = LIBVA_DRIVER_NAME,nvidia
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# ######## Terminal application #########
+env = TERMINAL,kitty -1
