--- a/hypr/hyprland/execs.conf
+++ b/hypr/hyprland/execs.conf
@@ -1,14 +1,14 @@
 # Bar, wallpaper
-exec-once = swww-daemon --format xrgb
-exec-once = /usr/lib/geoclue-2.0/demos/agent
-exec-once = ags &
+exec-once = ~/.config/hypr/hyprland/scripts/start_geoclue_agent.sh
+exec-once = qs -c $qsConfig &
 exec-once = ~/.config/hypr/ollama.sh
+
 # Input method
 exec-once = fcitx5
 
 # Core components (authentication, lock screen, notification daemon)
 exec-once = gnome-keyring-daemon --start --components=secrets
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 || /usr/libexec/polkit-kde-authentication-agent-1  || /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1
 exec-once = hypridle
 exec-once = dbus-update-activation-environment --all
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
@@ -19,10 +19,8 @@ exec-once = easyeffects --gapplication-service
 
 # Clipboard: history
 # exec-once = wl-paste --watch cliphist store &
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+exec-once = wl-paste --type text --watch bash -c 'cliphist store && qs -c $qsConfig ipc call cliphistService update'
+exec-once = wl-paste --type image --watch bash -c 'cliphist store && qs -c $qsConfig ipc call cliphistService update'
 
 # Cursor
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
