--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,14 +1,7 @@
 # MONITOR CONFIG
-monitor=DP-3,2560x1440@164.84,1920x0,1
-monitor=HDMI-A-1,1920x1080@60,0x360,1
-monitor=HDMI-A-2,1920x1200@60,4480x1000,1.333333
-
-workspace=1,monitor:DP-3,default:true
-workspace=3,monitor:DP-3
-workspace=2,monitor:HDMI-A-1,default:true
-workspace=4,monitor:HDMI-A-2,default:true
-workspace=10,monitor:HDMI-A-2
+monitor=eDP-1,2560x1600@120,0x0,1.333333
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
+workspace=1,monitor:eDP-1,default:true
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
 # monitor=HDMI-A-1,1920x1080@60,1920x0,1,mirror,eDP-1
@@ -47,7 +40,9 @@ input {
     special_fallthrough = true
     follow_mouse = 1
 }
-
+xwayland {
+    force_zero_scaling = true
+}
 gesture = 3, swipe, move,
 gesture = 4, horizontal, workspace
 gesture = 4, pinch, float
