--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -4,11 +4,11 @@
 #!
 ##! Shell
 # These absolutely need to be on top, or they won't work consistently
-# bindid = Super, Super_L, Toggle overview, global, quickshell:overviewToggleRelease # Toggle overview/launcher
-# bindid = Super, Super_R, Toggle overview, global, quickshell:overviewToggleRelease # [hidden] Toggle overview/launcher
-# bind = Super, Super_L, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
-# bind = Super, Super_R, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
-bind = Super, Super_L, exec, pkill wofi || wofi
+bindid = Super, Super_L, Toggle overview, global, quickshell:overviewToggleRelease # Toggle overview/launcher
+bindid = Super, Super_R, Toggle overview, global, quickshell:overviewToggleRelease # [hidden] Toggle overview/launcher
+bind = Super, Super_L, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
+bind = Super, Super_R, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
+# bind = Super, Super_L, exec, pkill wofi || wofi
 binditn = Super, catchall, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
 bind = Ctrl, Super_L, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
 bind = Ctrl, Super_R, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
@@ -65,9 +65,9 @@ bindd = Super+Shift, T, Character recognition,exec,grim -g "$(slurp $SLURP_ARGS)
 # Color picker
 bindd = Super+Shift, C, Color picker, exec, hyprpicker -a # Pick color (Hex) >> clipboard
 # Fullscreen screenshot
-bind=,Print,exec,hyprshot -m output -o ~/Screenshots/
-bind=SUPER,Print,exec,hyprshot -m window -o ~/Screenshots/
-bind=SUPERSHIFT,Print,exec,hyprshot -m region -o ~/Screenshots/
+bind=,F12,exec,hyprshot -m output -o ~/Screenshots/
+bind=SUPER,F12,exec,hyprshot -m window -o ~/Screenshots/
+bind=SUPERSHIFT,F12,exec,hyprshot -m region -o ~/Screenshots/
 # Recording stuff
 bindd = Super+Alt, R, Record region (no sound), exec, ~/.config/hypr/hyprland/scripts/record.sh # Record region (no sound)
 bindd = Ctrl+Alt, R, Record screen (no sound), exec, ~/.config/hypr/hyprland/scripts/record.sh --fullscreen # [hidden] Record screen (no sound)
@@ -103,7 +103,7 @@ bind = Super, Q, killactive, # Close
 binde = Super, Semicolon, splitratio, -0.1 # [hidden]
 binde = Super, Apostrophe, splitratio, +0.1 # [hidden]
 # Positioning mode
-bind = Super+Alt, Space, togglefloating, # Float/Tile
+bind = Super, Space, togglefloating, # Float/Tile
 bind = Super, D, fullscreen, 1 # Maximize
 bind = Super, F, fullscreen, 0 # Fullscreen
 bind = Super+Alt, F, fullscreenstate, 0 3 # Fullscreen spoof
