--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -64,7 +64,7 @@ windowrulev2 = tile, class:^dev\.warp\.Warp$
 # Picture-in-Picture
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = keepaspectratio, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrulev2 = move 73% 72%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$ 
+windowrulev2 = move 73% 72%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = size 25%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = pin, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
@@ -109,7 +109,7 @@ layerrule = ignorealpha 0.6, bar[0-9]*
 layerrule = blur, barcorner.*
 layerrule = ignorealpha 0.6, barcorner.*
 layerrule = blur, dock[0-9]*
-layerrule = ignorealpha 0.6, dock[0-9]*
+layerrule = ignorealpha 0.6, dork[0-9]*
 layerrule = blur, indicator.*
 layerrule = ignorealpha 0.6, indicator.*
 layerrule = blur, overview[0-9]*
@@ -122,8 +122,8 @@ layerrule = blur, sideleft[0-9]*
 layerrule = ignorealpha 0.6, sideleft[0-9]*
 layerrule = blur, indicator.*
 layerrule = ignorealpha 0.6, indicator.*
-layerrule = blur, osk[0-9]*
 layerrule = ignorealpha 0.6, osk[0-9]*
+layerrule = blur, osk[0-9]*
 
 # Quickshell
 layerrule = blurpopups, quickshell:.*
@@ -149,3 +149,10 @@ layerrule = animation slide top, quickshell:wallpaperSelector
 
 # Launchers need to be FAST
 layerrule = noanim, gtk4-layer-shell
+
+
+windowrule = workspace 2, class:firefox-developer-edition
+windowrule = workspace 4, class:org.telegram.desktop
+windowrule = workspace 4, class:discord
+windowrule = workspace 10, class:yandex-music
+windowrule = workspace 3, class:code
