--- a/hypr/hyprlock/colors.conf
+++ b/hypr/hyprlock/colors.conf
@@ -9,4 +9,4 @@ $font_family = Rubik
 $font_family_clock = Space Grotesk DemiBold
 $font_material_symbols = Material Symbols Rounded
 
-$background_image = /home/i3alumba/Downloads/black-hole.png
+$background_image = /home/i3alumba/Downloads/Telegram Desktop/black-hole.png
